--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
   	<link rel="stylesheet" type="text/css" href="jquery-ui.min.css">
 	<link rel="stylesheet" type="text/css" href="jquery.fullPage.css">
 	<link rel="stylesheet" type="text/css" href="mariage.css">
+	
 	<script type="text/javascript" src="jquery.min.js"></script>
 	<script type="text/javascript" src="jquery-ui.min.js"></script>
 	<script type="text/javascript" src="jquery.fullPage.min.js"></script>
@@ -31,7 +32,10 @@
 	<li data-menuanchor="page4"><a href="#page4">Page 4</a></li>
 </ul>
 <div id="fullpage">
-	<div class="section active" id="section1">Page 1</div>
+	<div class="section active" id="section1">
+		Le temps avant notre mariage<br>
+		<iframe src="countdown.html" allowtransparency="true" frameborder="0" scrolling="0" width="280" height="130"></iframe>	
+	</div>
 	<div class="section" id="section2">Page 2</div>
 	<div class="section" id="section3">Page 3</div>
 	<div class="section" id="section4">Page 4</div>
