--- a/views/index.html
+++ b/views/index.html
@@ -92,8 +92,21 @@
 		<div>
 			<h1>Programme</h1>
 		</div>
-		<div>
-			<div id="googleMap" style="width:500px;height:380px;"></div>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-lg-4">
+          			<h2 class="pull-left">Adresse</h2>
+					<div id="googleMap" style="width:450px;height:380px;"></div>
+				 </div>
+				 <div class="col-lg-4">
+          			<h2 class="pull-left">Schedule</h2>
+          			
+				 </div>
+				 <div class="col-lg-4">
+          			<h2 class="pull-left">Liste des cadeaux</h2>
+          			
+				 </div>
+			</div>
 		</div>
 	</div>
 </div>
