--- a/views/index.html
+++ b/views/index.html
@@ -116,7 +116,7 @@
 		<iframe src="countdown.html" allowtransparency="true" frameborder="0" scrolling="0" width="280" height="130"></iframe>
 		<h1 class="langFR">Nous allons nous marier!</h1>
 		<h1 class="langZH">我们要结婚啦！</h1>
-		<h1 class="langEN">We will marriage!</h1>
+		<h1 class="langEN">We will get married!</h1>
 	</div>
 	<div class="section" id="section2">
 		<div>
