--- a/views/index.html
+++ b/views/index.html
@@ -181,31 +181,71 @@
 		
 	</div>
 	<div class="section" id="section2">
-		<div>
-			<h1>Jing</h1>
-		</div>
-		<div>
-			<h1>Hao</h1>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-6">
+					<h1>Jing</h1>
+				</div>
+				<div class="col-md-6">
+					<h1>Hao</h1>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="section" id="section3">
 		<div class="slide" id="slide1">
-			<h1>2011</h1>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-12">
+						<h1>2011</h1>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="slide" id="slide2">
-			<h1>2012</h1>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-12">
+						<h1>2012</h1>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="slide" id="slide3">
-			<h1>2013</h1>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-12">
+						<h1>2013</h1>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="slide" id="slide4">
-			<h1>2014</h1>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-12">
+						<h1>2014</h1>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="slide" id="slide5">
-			<h1>2015</h1>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-12">
+						<h1>2015</h1>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="slide" id="slide6">
-			<h1>Futur</h1>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-12">
+						<h1>Futur</h1>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="section" id="section4">
@@ -214,15 +254,15 @@
 		</div>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-lg-4">
+				<div class="col-md-4">
           			<h2 class="pull-left">Adresse</h2>
 					<div id="googleMap" style="width:450px;height:380px;"></div>
 				 </div>
-				 <div class="col-lg-4">
+				 <div class="col-md-4">
           			<h2 class="pull-left">Schedule</h2>
           			
 				 </div>
-				 <div class="col-lg-4">
+				 <div class="col-md-4">
           			<h2 class="pull-left">Liste des cadeaux</h2>
           			
 				 </div>
