--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -43,24 +43,30 @@
 				<div class="col-md-12">
 					<!--TODO: a form to add a new invitee -->
 					<h2>Add a new invitee:</h2>
-					<form method="post" action="/addInvitee">
-						First name:	<input type="text" name="firstname" required>
-						<br>
-						Last name:	<input type="text" name="lastname" required>
-						<br>
-						Language: 
-						<select name="lang" required>
-							<option value="FR">Français</option>
-							<option value="ZH">中文</option>
-							<option value="EN">English</option>
-						</select>
-						<br>
-						Activity to attend:
-						<select name="actType" required>
-							<option value="dinner">Dinner</option>
-							<option value="barbecue">Barbecue</option>
-						</select>
-						<br><br>
+					<form role="form" method="post" action="/addInvitee">
+						<div class="form-group">
+							<label for="firstname">First name</label>
+							<input type="text" id="firstname" class="form-control" name="firstname" required>
+						</div>
+						<div class="form-group">
+							<label for="lastname">Last name</label>
+							<input type="text" id="lastname" class="form-control" name="lastname" required>
+						</div>
+						<div class="form-group">
+							<label for="lang">Language</label>
+							<select id="lang" class="form-control" name="lang" required>
+								<option value="FR">Français</option>
+								<option value="ZH">中文</option>
+								<option value="EN">English</option>
+							</select>
+						</div>
+						<div class="form-group">
+							<label for="actType">Activity to attend</label>
+							<select id="actType" class="form-control" name="actType" required>
+								<option value="dinner">Dinner</option>
+								<option value="barbecue">Barbecue</option>
+							</select>
+						</div>
 						<input type="submit" value="Submit">
 						<input type="reset" value="Reset">
 					</form>
