--- a/views/user_login.ejs
+++ b/views/user_login.ejs
@@ -11,14 +11,19 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-12">
-					<!--TODO: a form to login -->
+					<!--DONE: a form to login -->
 					<p style="color:red"><% if(locals.message){ %> <%= message %> <% } %></p>
 					</br>
-					<form method="post" action="/auth">
-						Username:	<input type="text" name="user" required>
-						<br>
-						Password:	<input type="password" name="pwd" required>
-						<input type="submit" value="Submit">
+					<form role="form" method="post" action="/auth">
+						<div class="form-group">
+							<label for="user">Username</label>
+							<input type="text" id="user" class="form-control" name="user" required>
+						</div>
+						<div class="form-group">
+							<label for="pwd">Password</label>
+							<input type="password" id="pwd" class="form-control" name="pwd" required>
+						</div>
+						<button type="submit" class="btn btn-default">Login</button>
 					</form>
 				</div>
 			</div>
