--- a/views/user_login.ejs
+++ b/views/user_login.ejs
@@ -10,7 +10,7 @@
 	<body>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-4">
 					<!--DONE: a form to login -->
 					<p style="color:red"><% if(locals.message){ %> <%= message %> <% } %></p>
 					</br>
@@ -25,6 +25,8 @@
 						</div>
 						<button type="submit" class="btn btn-default">Login</button>
 					</form>
+				</div>
+				<div class="col-md-8">
 				</div>
 			</div>
 		</div>
