--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -18,7 +18,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h2>Current invitees: <%= invitees.length %></h2>
-					<!--TODO: a list of the current invitees, support delete -->
+					<!--DONE: a list of the current invitees, support delete, download QRcode -->
 					<table class="table table-striped table-bordered">
 						<thead>
 							<tr>
@@ -26,7 +26,8 @@
 								<th>Firstname</th>
 								<th>Language</th>
 								<th>Activity</th>
-								<th></th>
+								<th></th> <!-- Delete -->
+								<th></th> <!-- DownloadQR -->
 							</tr>
 						</thead>
 						<tbody>
@@ -37,6 +38,7 @@
 									<td><%= invitees[i].lang %></td>
 									<td><%= invitees[i].actType %></td>
 									<td><input type="button" onclick="location.href ='/removeInvitee/?id=<%= invitees[i]._id%>'" value="Delete"></td>
+									<td><input type="button" onclick="location.href ='/downloadQR/?id=<%= invitees[i]._id%>'" value="DownloadQRcode"></td>
 								</tr>
 							<% } %>
 						</tbody>
@@ -45,7 +47,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4">
-					<!--TODO: a form to add a new invitee -->
+					<!--DONE: a form to add a new invitee -->
 					<h2>Add a new invitee:</h2>
 					<form role="form" method="post" action="/addInvitee">
 						<div class="form-group">
