--- a/views/index.ejs
+++ b/views/index.ejs
@@ -201,11 +201,11 @@
 					<h2 class="langFR">Jing</h2>
 					<h2 class="langZH">静</h2>
 					<h2 class="langEN">Jing</h2>
-					<img src="jingPortait.png" class="img-circle img-responsive">
+					<img src="jingPortait.png" class="img-circle">
 					<p class="langFR">
 					</p>
 					<p class="langZH">
-						
+						静，燕赵人士，曰静而喜动，喜欢小动物，伶俐而亲切。
 					</p>
 					<p class="langEN">
 					</p>
@@ -214,11 +214,11 @@
 					<h2 class="langFR">Hao</h2>
 					<h2 class="langZH">浩</h2>
 					<h2 class="langEN">Hao</h2>
-					<img src="haoPortait.png" class="img-circle img-responsive">
+					<img src="haoPortait.png" class="img-circle">
 					<p class="langFR">
 					</p>
 					<p class="langZH">
-						
+						浩，齐鲁人士，尊儒重道，喜欢散文那行云流水般的惬意，擅长变静为动。
 					</p>
 					<p class="langEN">
 					</p>
