--- a/views/user_login.ejs
+++ b/views/user_login.ejs
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="Content-Type" content="text/html">
+		<meta name="author" content="Jungle">
 		<title>Log in to manage</title>
 		<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 		
