--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,7 +1,11 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>admin of the invitees</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="Content-Type" content="text/html">
+		<meta name="author" content="Jungle">
+		<title>administration</title>
 		<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 		
 		<script type="text/javascript" src="jquery.min.js"></script>
@@ -76,6 +80,60 @@
 						</div>
 						<input type="submit" value="Submit">
 						<input type="reset" value="Reset">
+					</form>
+				</div>
+				<div class="col-md-8">
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="col-md-12">
+					<h2>Current presents: <%= presents.length %> </h2>
+					<!--DONE: a list of the current presents, support delete -->
+					<table class="table table-striped table-bordered">
+						<thead>
+							<tr>
+								<th>Chinese Name</th>
+								<th>French Name</th>
+								<th>Price</th>
+								<th></th> <!-- Delete -->
+							</tr>
+						</thead>
+						<tbody>
+							<% for(var i=0; i<presents.length; i++) { %>
+								<tr>
+									<td><%= presents[i].nameZH %></td>
+									<td><%= presents[i].nameFR %></td>
+									<td><%= presents[i].price %></td>
+									<td><input type="button" onclick="location.href ='/removePresent?id=<%= presents[i]._id%>'" value="Delete"></td>
+								</tr>
+							<% } %>
+						</tbody>
+					</table>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<!--DONE: a form to add a new present -->
+					<h2>Add a new present:</h2>
+					<form class="form-inline" method="post" action="/addPresent">
+						<div class="form-group">
+							<label for="nameZH">Chinese Name</label>
+							<input type="text" id="nameZH" class="form-control" name="nameZH" required>
+						</div>
+						<div class="form-group">
+							<label for="nameFR">French Name</label>
+							<input type="text" id="nameFR" class="form-control" name="nameFR" required>
+						</div>
+						<div class="form-group">
+							<label for="price">Price</label>
+							<input type="number" id="price" class="form-control" name="price" min='0' step='0.01' value='30' required>
+						</div>
+						<div class="form-group">
+							<label for="split">Split</label>
+							<input type="number" id="split" class="form-control" name="split" min='1' step='1' value='1' required>
+						</div>
+						<input type="submit" value="Submit">
 					</form>
 				</div>
 				<div class="col-md-8">
