--- a/views/index.ejs
+++ b/views/index.ejs
@@ -124,7 +124,7 @@
 	<ul id="selectLanguage" style="position:fixed; z-index:99; top: 15px; right: 20px" class="nav nav-pills">
 		<li id="selectFR" class="selectLanguageItem label label-primary" style="cursor:pointer">Français</li>
 		<li id="selectZH" class="selectLanguageItem label label-default" style="cursor:pointer">中文</li>
-		<li id="selectEN" class="selectLanguageItem label label-default" style="cursor:pointer">English</li>
+		<li id="selectEN" class="selectLanguageItem label label-default hide" style="cursor:pointer">English</li>
 	</ul>
 
 <div id="fullpage">
