--- a/public/stylesheets/mariage.css
+++ b/public/stylesheets/mariage.css
@@ -12,15 +12,23 @@ body{
 	color: rgba(0,0,0,0.5);
 }
 h1{
+	font-size: 5em;
 	color:white;
 }
 h2{
+	font-size: 4em;
 	color:white;
 }
 h3{
+	font-size: 3em;
 	color:white;
 }
 h4{
+	font-size: 2em;
+	color:white;
+}
+h5{
+	font-size: 1em;
 	color:white;
 }
 p{
