add the modification of invitee

--- a/public/stylesheets/invitation.css
+++ b/public/stylesheets/invitation.css
@@ -29,6 +29,16 @@ p{
 	font-size: 1em;
 }
 
+.verticaltext {
+    transform: rotate(90deg);
+    transform-origin: right, top;
+    -ms-transform: rotate(90deg);
+    -ms-transform-origin:right, top;
+    -webkit-transform: rotate(90deg);
+    -webkit-transform-origin:right, top;
+    position: absolute; 
+}
+
 #invitation .page{
     background-color:red;
     line-height:1em;
