--- a/views/invitation.ejs
+++ b/views/invitation.ejs
@@ -44,15 +44,15 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-12">
-							<div class="langZH" style="writing-mode:vertical-rl;">
+							<div class="langZH">
 								<h3>送呈 <%= invitee.lastname %> <%= invitee.firstname %> 亲启</h3>
 								<p>张浩与郭静谨定于公元2015年5月2日（乙未年三月十四日）在Castres举行结婚典礼敬备喜筵！
 								</p>
 								<p>恭请光临
 								</p>
 							</div>
-							<div class="langFR" style="layout-flow: vertical-ideographic;">
-								<h3 style="layout-flow: vertical-ideographic">送呈 <%= invitee.lastname %> <%= invitee.firstname %> 亲启</h3>
+							<div class="langFR">
+								<h3>送呈 <%= invitee.lastname %> <%= invitee.firstname %> 亲启</h3>
 								<p>张浩与郭静谨定于公元2015年5月2日（乙未年三月十四日）在Castres举行结婚典礼敬备喜筵！
 								</p>
 								<p>恭请光临
