--- a/views/present.ejs
+++ b/views/present.ejs
@@ -1,40 +1,5 @@
 			<div class="row">
-				<div class="col-md-4">
-					<!--DONE: a form to add a new invitee -->
-					<h2>Add a new invitee:</h2>
-					<form role="form" method="post" action="/addInvitee">
-						<div class="form-group">
-							<label for="firstname">First name</label>
-							<input type="text" id="firstname" class="form-control" name="firstname" required>
-						</div>
-						<div class="form-group">
-							<label for="lastname">Last name</label>
-							<input type="text" id="lastname" class="form-control" name="lastname" required>
-						</div>
-						<div class="form-group">
-							<label for="lang">Language</label>
-							<select id="lang" class="form-control" name="lang" required>
-								<option value="FR">Français</option>
-								<option value="ZH">中文</option>
-								<option value="EN">English</option>
-							</select>
-						</div>
-						<div class="form-group">
-							<label for="actType">Activity to attend</label>
-							<select id="actType" class="form-control" name="actType" required>
-								<option value="dinner">Dinner</option>
-								<option value="barbecue">Barbecue</option>
-							</select>
-						</div>
-						<input type="submit" value="Submit">
-						<input type="reset" value="Reset">
-					</form>
-				</div>
-				<div class="col-md-8">
-				</div>
-			</div>
-			
-			<div class="row">
+				<script type="text/javascript"></script>
 				<div class="col-md-12">
 					<h2>Current presents: <%= presents.length %> </h2>
 					<!--DONE: a list of the current presents, support delete -->
